# vins-eval-ros2

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
camera_models/: pyproject.toml
camera_models/camera_models/: camera_factory.py  equidistant_camera.py  mei_camera.py  pinhole_camera.py  yaml_utils.py
config/euroc/: euroc_stereo_config.yaml  euroc_stereo_imu_config.yaml
eval/: trajectory_metrics_mono.csv  trajectory_metrics_stereo.csv
global_fusion/: setup.cfg
global_fusion/global_fusion/: __init__.py
global_fusion/src/: globalOpt.cpp  globalOpt.h  globalOptNode.cpp
loop_fusion/: CMakeLists.txt  package.xml
loop_fusion/loop_fusion/: keyframe.py
loop_fusion/src/: image_encodings.hpp  keyframe.cpp  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
output/openvins/mono_imu/: V1_01_easy_cam0.txt  V1_02_medium_cam0.txt  V1_03_difficult_cam0.txt  V2_01_easy_cam0.txt  V2_02_medium_cam0.txt  V2_03_difficult_cam0.txt
output/openvins/stereo_imu/: V1_01_easy_cam0.txt  V1_02_medium_cam0.txt  V1_03_difficult_cam0.txt  V2_01_easy_cam0.txt  V2_02_medium_cam0.txt  V2_03_difficult_cam0.txt
python/: PROGRESS.md  pyproject.toml
python/camera_models/: package.xml  setup.cfg
python/camera_models/camera_models/: __init__.py  camera_base.py  camera_factory.py
python/global_fusion/: package.xml
python/global_fusion/global_fusion/: global_opt.py  ros_node.py
python/loop_fusion/: pyproject.toml  setup.cfg
python/loop_fusion/loop_fusion/: __init__.py
python/vins/: setup.cfg
python/vins/launch/: vins.launch.py
python/vins/vins/: __init__.py
python/vins/vins/estimator/: parameters.py
python/vins/vins/factor/: marginalization_factor.py  projection_factors.py
python/vins/vins/feature_tracker/: __init__.py
python/vins/vins/initial/: __init__.py
python/vins/vins/utility/: __init__.py  utility.py
scripts/: generate_euroc_trajectories.py  run_vins_trajectories.py
src/: System.cc  Tracking.cc
vins/: CMakeLists.txt  package.xml  pyproject.toml
vins/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp
vins/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins/src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h  projection_factor.h
vins/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.h  initial_sfm.h  solve_5pts.h
vins/src/utility/: visualization.cpp  visualization.h
vins/vins/: ros_node.py
vins/vins/estimator/: estimator.py  parameters.py
vins/vins/factor/: __init__.py  integration_base.py
vins/vins/feature_tracker/: feature_tracker.py
vins/vins/initial/: initial_alignment.py  initial_sfm.py  solve_5pts.py
