[project]
name = "vins-camera-models"
version = "1.0.0"
description = "Camera calibration models for VINS-Fusion"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pyyaml>=6.0",
    "scipy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["camera_models"]
