[develop]
script_dir=$base/lib/vins_global_fusion
[install]
install_scripts=$base/lib/vins_global_fusion

[metadata]
name = vins_global_fusion
version = 1.0.0
description = GPS/global pose fusion for VINS-Fusion (Python)

[options]
packages = find:

[options.entry_points]
console_scripts =
    global_fusion_node = global_fusion.ros_node:main

[options.data_files]
share/ament_index/resource_index/packages =
    resource/vins_global_fusion
share/vins_global_fusion =
    package.xml
