[project]
name = "vins"
version = "1.0.0"
description = "Python VINS-Fusion VIO estimator (ROS2)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "opencv-python>=4.9",
    "pyyaml>=6.0",
    "transforms3d>=0.4",
    "vins-camera-models",
]

[project.scripts]
vins_node = "vins.ros_node:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vins"]
