<?xml version="1.0"?>
<package format="3">
  <name>vins_camera_models</name>
  <version>1.0.0</version>
  <description>Python camera calibration models for VINS-Fusion</description>
  <maintainer email="maintainer@example.com">VINS Team</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
