[develop]
script_dir=$base/lib/vins_camera_models
[install]
install_scripts=$base/lib/vins_camera_models

[metadata]
name = vins_camera_models
version = 1.0.0
description = Python camera calibration models for VINS-Fusion

[options]
packages = find:

[options.data_files]
share/ament_index/resource_index/packages =
    resource/vins_camera_models
share/vins_camera_models =
    package.xml
