[project]
name = "vins-loop-fusion"
version = "1.0.0"
description = "Python loop-closure detection and pose graph for VINS-Fusion"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "opencv-python>=4.9",
    "pyyaml>=6.0",
    "vins-camera-models",
]

[project.scripts]
loop_fusion_node = "loop_fusion.ros_node:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loop_fusion"]
