[develop]
script_dir=$base/lib/vins_loop_fusion
[install]
install_scripts=$base/lib/vins_loop_fusion

[metadata]
name = vins_loop_fusion
version = 1.0.0
description = Python loop-closure and pose graph optimization for VINS-Fusion

[options]
packages = find:

[options.entry_points]
console_scripts =
    loop_fusion_node = loop_fusion.ros_node:main

[options.data_files]
share/ament_index/resource_index/packages =
    resource/vins_loop_fusion
share/vins_loop_fusion =
    package.xml
