[develop]
script_dir=$base/lib/vins
[install]
install_scripts=$base/lib/vins

[metadata]
name = vins
version = 1.0.0
description = Python VINS-Fusion visual-inertial odometry (ROS2)

[options]
packages = find:

[options.entry_points]
console_scripts =
    vins_node = vins.ros_node:main

[options.data_files]
share/ament_index/resource_index/packages =
    resource/vins
share/vins =
    package.xml
share/vins/launch =
    launch/vins.launch.py
